resources/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warnet
  labels:
    name: warnet
