resources/manifests/warnet-rpc-statefulset-dev.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rpc
  namespace: warnet
spec:
  serviceName: "rpc"
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rpc
  template:
    metadata:
      labels:
        io.kompose.service: rpc
    spec:
      containers:
      - name: warnet-rpc
        imagePullPolicy: Never
        image: warnet/dev
        ports:
        - containerPort: 9276
        volumeMounts:
          - name: source-code
            mountPath: /root/warnet
        livenessProbe:
          # fail (restart) the pod if we can't find pid of warnet
          exec:
            command:
              - /bin/sh
              - -c
              - |
                if pgrep -f warnet > /dev/null; then
                    exit 0
                else
                    exit 1
                fi
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          # mark the pod as ready if we can get a 200 response from
          # the /-/healthy endpoint on port 9276.
          # If we can't, don't send traffic to the pod
          httpGet:
            path: /-/healthy
            port: 9276
          initialDelaySeconds: 1
          periodSeconds: 2
          failureThreshold: 2
          timeoutSeconds: 2
      volumes:
      - name: source-code
        hostPath:
          path: /mnt/src
          type: Directory
